--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -475,6 +475,8 @@ img{
   }
   .about__img img{
     width: 250px;
+    border:2px solid black;
+    border-radius: 20px;
   }
   .work__container{
     grid-template-columns: repeat(3, 1fr);
